@@ -46,7 +46,7 @@
 		android:allowBackup="true"
 		android:backupAgent="org.koitharu.kotatsu.settings.backup.AppBackupAgent"
 		android:dataExtractionRules="@xml/backup_rules"
-		android:enableOnBackInvokedCallback="true"
+		android:enableOnBackInvokedCallback="@bool/is_predictive_back_enabled"
 		android:fullBackupContent="@xml/backup_content"
 		android:fullBackupOnly="true"
 		android:icon="@mipmap/ic_launcher"
