@@ -1,3 +1,5 @@
 package org.koitharu.kotatsu.core.exceptions
 
-class CaughtException(cause: Throwable) : RuntimeException("${cause.javaClass.simpleName}(${cause.message})", cause)
+class CaughtException(
+	override val cause: Throwable
+) : RuntimeException("${cause.javaClass.simpleName}(${cause.message})", cause)
