@@ -6,4 +6,5 @@
 	<bool name="com_samsung_android_icon_container_has_icon_container">true</bool>
 	<bool name="is_color_themes_available">false</bool>
 	<bool name="is_sync_enabled">true</bool>
+	<bool name="is_predictive_back_enabled">true</bool>
 </resources>
